--- a/Books.html
+++ b/Books.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Books</title>
+    <title>books</title>
   </head>
   <body>
     <h3>Books</h3>
