--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <hr>
 
     <br>
-    <a href="Books.html">Books</a>
+    <a href="books.html">Books</a>
     <a href="Contact.html">Contact Me</a>
 
   </body>
