--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="Images/Gareth_Profile.png" alt="Profile picture"></td>
+        <td><img src="Gareth_Profile.png" alt="Profile picture"></td>
         <td>  <h1>Gareth Forsth</h1>
           <p><em>Medical Engineer working for Draeger, <strong>who is currently learning full stack web development</strong></em></p>
           <p>
